Fixed: RangeSlider Tooltip even on mobile devices.

--- a/core/components/range-slider/RangeSlider.scss
+++ b/core/components/range-slider/RangeSlider.scss
@@ -84,18 +84,11 @@ $knob-shadow: 1px 1px rgba(0, 0, 0, 0.2) !default;
   padding: 2px;
   border: solid 0.3px rgba(0, 0, 0, 0.2);
   font-size: 13px;
-  top: -28px;
+  top: -32px;
   left: -8px;
   text-align: center;
   width: 40px;
   min-width: max-content;
-  opacity: 0;
   border-radius: 4px;
   transition: all 0.2s;
-}
-
-.lv-range-slider__knob:hover .lv-range-slider__knob__val,
-.lv-range-slider__knob:active .lv-range-slider__knob__val {
-  top: -32px;
-  opacity: 1;
 }
